@@ -9,6 +9,8 @@ New:
  - Add alternative window support (ti/te)
  - Fix file name of non-global configuration settings.
  - Update translations: indonesian, french
+ - Fix F10 macro key used in current setups
+ - Add F11 and F12 for macro use
 
 New for for version 2.7:
  - Configurable status line via -F option, see manpage for a listing
